--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       </h1>
       <nav>
         {{#if loggedIn}}
-        <a href= "/dashboard">Timeline</a>
+        <a href= "/dashboard">Create</a>
         <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
         <a href="/login">Login</a>
