--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,15 +1,16 @@
 <article>
-  <a href="/dashboard"> &larr; Back to timeline</a>
+  <a href="/dashboard"> &larr; Back to Create</a>
   <h2>
     Edit Post
   </h2>
   <form class="edit-post-form">
     <div>
-      <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{format_url post.post_url}})</span>
+      <input name="post-title" type="text" value="{{post.title}}" /> 
+      <br> 
+      <div>({{post.post_url}})</div>
     </div>
     <div>
-      {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
+      {{post.vote_count}} {{format_plural "like" post.vote_count}} by you on {{format_date post.created_at}}
       |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
